--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+#deleted dist from gitignore for adding gh-pages branch!
+#/dist
 /tmp
 /out-tsc
 
